Removed two further scss files

--- a/dataland-frontend/src/assets/scss/components/form.scss
+++ b/dataland-frontend/src/assets/scss/components/form.scss
@@ -1,8 +1,8 @@
-.input-group {
+/*.input-group {
   position: relative;
   margin-top: 3em;
   margin-bottom: 3em;
-}
+}*/
 form {
   text-align: left;
   [data-type='text'],
@@ -64,398 +64,6 @@ input[type='radio'] {
   }
 }
 
-.checkbox-error {
-  color: #ee1a1a;
-}
-
-.p-inputtext {
-  font-family: inherit;
-  color: var(--input-text-color);
-  background: var(--input-text-bg);
-  padding: var(--spacing-sm);
-  border: 0;
-  margin: 0;
-  transition:
-    background-color 0.2s,
-    color 0.2s,
-    border-color 0.2s,
-    box-shadow 0.2s;
-  appearance: none;
-  &:enabled:hover {
-    border-color: var(--input-text-border-hover);
-  }
-  &:enabled:focus {
-    outline: 0 none;
-    outline-offset: 0;
-    box-shadow: 0 0 0 0.2rem #bfd1f6;
-    border-color: var(--input-text-border-hover);
-  }
-  &.p-invalid.p-component {
-    border-color: #ced4da #ced4da #ced4da #e4677e;
-  }
-  &.p-inputtext-sm {
-    font-size: var(--font-size-sm);
-    padding: var(--spacing-xs);
-  }
-  &.p-inputtext-lg {
-    font-size: var(--font-size-lg);
-    padding: var(--spacing-sm);
-  }
-}
-
-.p-radiobutton {
-  display: inline-flex;
-  cursor: pointer;
-  user-select: none;
-  vertical-align: bottom;
-  width: 20px;
-  height: 20px;
-  &:enabled:focus {
-    outline: 0 none;
-  }
-}
-
-.p-dropdown {
-  background: var(--input-text-bg);
-  .p-dropdown-trigger {
-    background: transparent;
-    color: var(--p-primary-contrast-color);
-    width: 2.357rem;
-  }
-}
-
-.outline-dropdown {
-  background: transparent;
-  border-width: 2px;
-  border-style: solid;
-  border-color: var(--outline-dropdown-border);
-  border-radius: 8px;
-  .p-inputtext {
-    background: transparent;
-  }
-}
-
-.fill-dropdown {
-  background: var(--default-neutral-white);
-  border-width: 2px;
-  border-style: solid;
-  border-color: var(--fill-dropdown-bg);
-  border-radius: 8px;
-  &.always-fill {
-    background: var(--fill-dropdown-bg);
-    color: var(--default-neutral-white);
-    .p-inputtext {
-      color: var(--default-neutral-white);
-    }
-    .p-dropdown-trigger {
-      color: var(--default-neutral-white);
-    }
-  }
-  &.p-inputwrapper-filled {
-    background: var(--fill-dropdown-bg);
-    color: var(--default-neutral-white);
-    .p-inputtext {
-      color: var(--default-neutral-white);
-    }
-    .p-dropdown-trigger {
-      color: var(--default-neutral-white);
-    }
-  }
-  &.p-overlay-open {
-    background: var(--fill-dropdown-hover-bg);
-    .p-inputtext {
-      color: var(--fill-dropdown-hover-text);
-    }
-    .p-dropdown-trigger {
-      color: var(--fill-dropdown-hover-text);
-    }
-  }
-  &.p-focus {
-    .p-inputtext {
-      outline-width: 0;
-    }
-  }
-  .p-inputtext {
-    background: transparent;
-    padding: 0.5rem 0.75rem;
-    color: var(--fill-dropdown-hover-text);
-  }
-  .p-dropdown-trigger {
-    color: var(--fill-dropdown-hover-text);
-  }
-}
-
-.p-dropdown-panel {
-  background: var(--default-neutral-white);
-  .p-dropdown-items {
-    .p-dropdown-item {
-      margin: 0;
-      padding: 0.5rem 1rem;
-      border: 0.1em solid var(--dropdown-options-bg);
-      color: var(--input-text-color);
-      background: transparent;
-      transition:
-        background-color 0.2s,
-        border-color 0.2s,
-        box-shadow 0.2s;
-      border-radius: 0;
-      &:not(.p-highlight):not(.p-disabled):hover {
-        background: var(--dropdown-options-bg);
-      }
-      &.p-highlight {
-        color: var(--input-text-bg);
-        background: var(--input-text-border-hover);
-      }
-    }
-  }
-}
-
-.p-dropdown-clear-icon {
-  position: relative;
-  margin: auto;
-}
-
-.p-datepicker {
-  padding: 0.5rem;
-  background: var(--card-background);
-  color: var(--card-text);
-  border-radius: 0;
-  &:not(.p-datepicker-inline) {
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1);
-  }
-  .p-datepicker-header {
-    padding: 0.5rem;
-    font-weight: var(--semi-bold-weight);
-    margin: 0;
-    border-bottom: 1px solid #dee2e6;
-    .p-datepicker-prev,
-    .p-datepicker-next {
-      width: 2rem;
-      height: 2rem;
-      color: #6c757d;
-      border: 0 none;
-      background: transparent;
-      border-radius: 50%;
-      transition:
-        background-color 0.2s,
-        color 0.2s,
-        box-shadow 0.2s;
-      &:enabled:hover {
-        background: #e9ecef;
-      }
-      &:focus {
-        outline: 0 none;
-        outline-offset: 0;
-        box-shadow: 0 0 0 0.2rem #bfd1f6;
-      }
-    }
-    .p-datepicker-title {
-      line-height: 2rem;
-      .p-datepicker-year,
-      .p-datepicker-month {
-        font-size: var(--input-text-fs);
-        font-weight: var(--font-weight-medium);
-        &:enabled:hover {
-          color: var(--main-color);
-        }
-      }
-      .p-datepicker-month {
-        margin-right: 0.5rem;
-      }
-    }
-  }
-  .p-yearpicker,
-  .p-monthpicker {
-    margin: 1rem 0;
-    .p-yearpicker-year,
-    .p-monthpicker-month {
-      padding: 0.5rem;
-      &.p-highlight {
-        color: var(--btn-primary-color);
-        background: var(--btn-primary-bg);
-      }
-      &:not(.p-disabled):not(.p-highlight):hover {
-        background: var(--gray-light);
-      }
-    }
-  }
-  table {
-    margin: 0.5rem 0;
-    th {
-      padding: 0.5rem;
-      span {
-        width: 2.5rem;
-        height: 2.5rem;
-      }
-    }
-    td {
-      padding: 0.5rem;
-      span {
-        width: 2.5rem;
-        height: 2.5rem;
-        border-radius: 50%;
-        transition:
-          background-color 0.2s,
-          border-color 0.2s,
-          box-shadow 0.2s;
-        border: 1px solid transparent;
-        &.p-highlight {
-          color: var(--btn-primary-color);
-          background: var(--btn-primary-bg);
-          &:hover {
-            color: var(--btn-primary-color);
-            background: var(--btn-primary-bg);
-          }
-        }
-        &:hover {
-          background: var(--gray-light);
-        }
-        &.p-disabled {
-          opacity: 0.3;
-        }
-      }
-      &.p-datepicker-today > span {
-        background: var(--gray-light);
-        color: var(--p-blue-950);
-      }
-    }
-  }
-  .p-datepicker-buttonbar {
-    padding: 1rem 0;
-    border-top: 1px solid #dee2e6;
-  }
-}
-
-.p-multiselect-panel {
-  background: var(--bg-text-primary);
-  color: var(--main-text-color);
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1);
-  .p-multiselect-header {
-    padding: 0.5rem 1rem;
-    .p-multiselect-filter-icon {
-      right: 0.5rem;
-    }
-    .p-checkbox {
-      margin-right: 0.5rem;
-      &::after {
-        content: 'Select All';
-        margin-left: 0.5rem;
-        z-index: -2;
-      }
-    }
-
-    .p-multiselect-close-icon {
-      &::before {
-        display: none;
-      }
-    }
-  }
-  .p-multiselect-items {
-    padding: 0.5rem 0;
-    .p-multiselect-empty-message {
-      margin-left: 1.25rem;
-    }
-    .p-multiselect-item {
-      padding: 0.5rem 1rem;
-      &.p-highlight {
-        color: var(--bg-text-primary);
-        background: var(--main-color);
-      }
-      &:not(.p-highlight):not(.p-disabled):hover {
-        background: var(--input-text-bg);
-      }
-      .p-checkbox {
-        margin-right: 0.5rem;
-      }
-    }
-  }
-}
-
-.p-toggleswitch{
-  width: 2.1rem;
-  height: 1.2rem;
-  .p-toggleswitch-slider {
-    background: var(--toggleswitch-slider-bg-off);
-    transition:
-      background-color 0.2s,
-      color 0.2s,
-      border-color 0.2s,
-      box-shadow 0.2s;
-    border-radius: 30px;
-    &::before {
-      background: var(--bg-text-primary);
-      width: 1rem;
-      height: 1rem;
-      margin-top: -0.5rem;
-      left: 0;
-      border-radius: 50%;
-      transition-duration: 0.2s;
-    }
-  }
-  &.p-toggleswitch-checked {
-    .p-toggleswitch-slider {
-      background: var(--toggleswitch-slider-bg);
-      &::before {
-        background: var(--bg-text-primary);
-        transform: translateX(1rem);
-      }
-    }
-  }
-}
-
-.p-toggleswitch-singlecolor {
-  width: 2.1rem;
-  height: 1.2rem;
-  .p-toggleswitch-slider {
-    background: var(--toggleswitch-singlecolor-slider-bg);
-    transition:
-      background-color 0.2s,
-      color 0.2s,
-      border-color 0.2s,
-      box-shadow 0.2s;
-    border-radius: 30px;
-    &::before {
-      background: var(--bg-text-primary);
-      width: 1rem;
-      height: 1rem;
-      margin-top: -0.5rem;
-      border-radius: 50%;
-      transition-duration: 0.2s;
-    }
-  }
-  &.p-toggleswitch-checked {
-    .p-toggleswitch-slider {
-      background: var(--toggleswitch-singlecolor-slider-bg);
-      &::before {
-        background: var(--bg-text-primary);
-        transform: translateX(1rem);
-      }
-    }
-  }
-}
-
-.p-tooltip {
-  .p-tooltip-text {
-    background: var(--input-label-color);
-    color: var(--bg-text-primary);
-    padding: 0.5rem;
-    border-radius: 0;
-    width: max-content;
-    max-width: 300px;
-  }
-  &.p-tooltip-right .p-tooltip-arrow {
-    border-right-color: var(--input-label-color);
-  }
-  &.p-tooltip-left .p-tooltip-arrow {
-    border-left-color: var(--input-label-color);
-  }
-  &.p-tooltip-top .p-tooltip-arrow {
-    border-top-color: var(--input-label-color);
-  }
-  &.p-tooltip-bottom .p-tooltip-arrow {
-    border-bottom-color: var(--input-label-color);
-  }
-}
 .d-nace-textinput {
   width: 33%;
   border-radius: 0;
