Clean up still existing scss files

--- a/dataland-frontend/src/assets/scss/mixins.scss
+++ b/dataland-frontend/src/assets/scss/mixins.scss
@@ -1,3 +1,4 @@
+// THIS FILE IS TARGETED TO BE REMOVED WHEN ALL VARIABLES DEFINED BECOME UNNECESSARY
 @mixin icon-override($icon) {
   background: none !important;
   font-family: 'Material Icons Round';
