--- a/dataland-frontend/src/assets/scss/units.scss
+++ b/dataland-frontend/src/assets/scss/units.scss
@@ -1,12 +1,5 @@
+// THIS FILE IS TARGETED TO BE REMOVED WHEN ALL VARIABLES DEFINED BECOME UNNECESSARY
 :root{
-  //forms
-  --input-text-fs: var(--font-size-base);
-  --button-fw: var(--font-weight-semibold);
-  --upload-form-padding: var(--spacing-lg);
-
-  //typography
-  --light-bold-weight: var(--font-weight-medium); // 500
-  --semi-bold-weight: var(--font-weight-semibold); // 600
 
   //table
   --first-table-column-width: 30vw;
