--- a/dataland-frontend/src/assets/scss/colors.scss
+++ b/dataland-frontend/src/assets/scss/colors.scss
@@ -1,3 +1,5 @@
+// THIS FILE IS TARGETED TO BE REMOVED WHEN ALL VARIABLES DEFINED BECOME UNNECESSARY
+
 :root {
   // buttons
   --btn-primary-color: var(--default-neutral-white);
