Fix UploadFieldSpecificReports form

--- a/dataland-frontend/src/assets/theme/main.css
+++ b/dataland-frontend/src/assets/theme/main.css
@@ -1,4 +1,5 @@
 @import '@/assets/scss/theme.scss';
+@import '@/assets/scss/forms.scss';
 @import '@/assets/scss/colors.scss';
 @import '@/assets/scss/units.scss';
 
