--- a/dataland-frontend/src/assets/scss/forms.scss
+++ b/dataland-frontend/src/assets/scss/forms.scss
@@ -6,7 +6,7 @@
     height: 1rem;
     width: 1rem;
     cursor: pointer;
-    margin: 0 .5rem 0 0;
+    margin: 0 0.5rem 0 0;
   }
 
   input[type='checkbox'] {
