--- a/dataland-frontend/src/assets/scss/forms.scss
+++ b/dataland-frontend/src/assets/scss/forms.scss
@@ -481,8 +481,6 @@
   }
 }
 
-
-
 .border-bottom-table {
   border-bottom: 1px solid var(--table-border);
 }
@@ -502,8 +500,9 @@
   background: #ffffff;
   border: 1px solid rgb(226, 232, 240);
   border-radius: 0.5rem;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
-  rgba(0, 0, 0, 0.1) 0 2px 4px -2px;
+  box-shadow:
+    rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
+    rgba(0, 0, 0, 0.1) 0 2px 4px -2px;
   min-width: 12.5rem;
   padding: 1rem;
   display: grid;
