DALA-3674: added info message

--- a/dataland-frontend/src/assets/theme/main.css
+++ b/dataland-frontend/src/assets/theme/main.css
@@ -57,3 +57,9 @@ body {
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-normal);
 }
+
+.dataland-info-text {
+  font-size: var(--font-size-xs);
+  color: var(--p-gray-600);
+  font-style: italic;
+}
