--- a/dataland-frontend/src/assets/theme/main.css
+++ b/dataland-frontend/src/assets/theme/main.css
@@ -64,7 +64,14 @@ body {
 }
 
 .dataland-info-text {
-  font-size: var(--font-size-xs);
   color: var(--p-gray-600);
   font-style: italic;
+
+  &.small{
+    font-size: var(--font-size-xs);
+  }
+  &.normal{
+    font-size: var(--font-size-base);
+  }
+
 }
