--- a/dataland-frontend/src/assets/scss/forms.scss
+++ b/dataland-frontend/src/assets/scss/forms.scss
@@ -1,3 +1,4 @@
+// THIS FILE IS TARGETED TO BE REMOVED WHEN ALL VARIABLES DEFINED BECOME UNNECESSARY
 .uploadFormWrapper {
   input[type='checkbox']:not(.p-toggleswitch-input):not(.p-radiobutton),
   input[type='radio']:not(.p-toggleswitch-input):not(.p-radiobutton) {
