DALA-3674: applied changes from review

--- a/dataland-frontend/src/assets/theme/main.css
+++ b/dataland-frontend/src/assets/theme/main.css
@@ -19,6 +19,7 @@
   --font-weight-bold: 700;
 
   --spacing-none: 0rem;
+  --spacing-xxxs: 0.125rem;
   --spacing-xxs: 0.25rem;
   --spacing-xs: 0.5rem;
   --spacing-sm: 0.75rem;
